--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-scroll-area": "^1.2.2",
+    "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "next": "15.1.4",
     "react": "^19.0.0",
