--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
